@@ -102,12 +102,8 @@ public class QuestionnaireChecklistApplicationService extends AbstractApplicatio
         List<QuestionnaireChecklistDTO> questionnaireChecklistDTOList = new ArrayList<>();
 
         try {
-            List<MutationEntity> unauthorizedEntities = mutationsDomainService.getUnauthorizedMutation(
-                    getTaskCode(),AUTHORIZED_N);
-            questionnaireChecklistDTOList.addAll(domainService.getQuestionnaireChecklists().stream()
-                    .map(entity -> assembler.convertEntityToDto(entity))
-                    .collect(Collectors.toList()));
-            questionnaireChecklistDTOList.addAll(unauthorizedEntities.stream().map(entity -> {
+            List<MutationEntity> entities = mutationsDomainService.getMutations(getTaskCode());
+            questionnaireChecklistDTOList.addAll(entities.stream().map(entity -> {
                 String data = entity.getPayload().getData();
                 QuestionnaireChecklistDTO questionnaireChecklistDTO = null;
                 try {
@@ -118,11 +114,8 @@ public class QuestionnaireChecklistApplicationService extends AbstractApplicatio
                     ExceptionUtil.handleException(JSON_PARSING_ERROR);
                 }
                 return questionnaireChecklistDTO;
-            }).collect(Collectors.toList()));
-            questionnaireChecklistDTOList = questionnaireChecklistDTOList.stream().collect(
-                    Collectors.groupingBy(QuestionnaireChecklistDTO::getQuestionChecklistId, Collectors.collectingAndThen(
-                            Collectors.maxBy(Comparator.comparing(QuestionnaireChecklistDTO::getRecordVersion)),
-                            Optional::get))).values().stream().collect(Collectors.toList());
+            }).toList());
+
             fillTransactionStatus(transactionStatus);
         }
         catch (Exception exception) {
